# virel

./: .gitignore  ACCESSIBILITY.md  LICENSE  README.md  SECURITY.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
benchmarks/: README.md  RESULTS.md  harness.py  tasks.json
editors/: README.md
editors/vscode/: extension.js  package.json
examples/demo/: star-rating.manifest.json  virel.toml  widgets.manifest.json
examples/third-party-widgets/: README.md  star-rating.js  star-rating.manifest.json  widgets.manifest.json
scripts/: ci
src/virel/: __init__.py  a11y.py  ai.py  bind.py  browsertest.py  budgets.py  channels.py  charts.py  cli.py  compiler.py  context.py  context_packs.py  contextpack.py  data.py  datagrid.py  deploy.py  diagnostics.py  doctor.py  elements.py  embed.py  expr.py  formatting.py  forms.py  graph.py  highlight.py  i18n.py  icons.py  lockfile.py  lsp.py  mcp.py  migrate.py  (+21 more)
tests/: conftest.py  test_a11y.py  test_agent.py  test_ai.py  test_bind.py  test_boundaries_and_events.py  test_budgets.py  test_channels.py  test_cli_commands.py  test_client_compiler.py  test_client_subset_ext.py  test_compiler.py  test_completion_11x.py  test_components.py  test_context_and_chrome.py  test_data_adapters.py  test_datagrid.py  test_dev_server.py  test_each_interactivity.py  test_effects_and_adapters.py  test_embed.py  test_execution_zones.py  test_expr.py  test_forms.py  test_highlight.py  test_i18n.py  test_integrations.py  test_islands.py  test_large_data.py  test_layout.py  test_lsp.py  test_motion.py  test_mutations_guards_formatting.py  test_navigation.py  test_notebook.py  test_plugins.py  test_policy_mode.py  test_product_components.py  test_production_assets.py  test_required_modes.py  (+17 more)
tests_browser/: conftest.py  test_demo.py
(+22 files in other folders)
