[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virel"
version = "0.1.0a0"
description = "Professional interfaces, written in Python. A compiler-first frontend framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David William Silva", email = "contact@davidwsilva.com" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pydantic>=2"]

[project.scripts]
virel = "virel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
virel = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
