[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virel"
version = "0.1.0a0"
description = "Professional interfaces, written in Python. A compiler-first frontend framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "David William Silva", email = "contact@davidwsilva.com" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/virelui/virel"
Repository = "https://github.com/virelui/virel"
Issues = "https://github.com/virelui/virel/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pydantic>=2", "numpy>=1.26", "pandas>=2.1",
       "polars>=0.20", "pyarrow>=15", "matplotlib>=3.8", "altair>=5.2",
       "vl-convert-python>=1.3"]
browser = ["pytest>=8", "playwright>=1.40"]

[project.scripts]
virel = "virel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
virel = ["assets/*", "assets/fonts/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
